--- a/package.json
+++ b/package.json
@@ -5,9 +5,14 @@
   "main": "index.js",
   "author": "lgit",
   "dependencies": {
+    "@babel/node": "^7.2.2",
+    "@babel/preset-env": "^7.4.4",
     "express": "^4.17.0"
   },
   "scripts": {
-    "start": "node index.js"
+    "start": "nodemon babel-node index.js"
+  },
+  "devDependencies": {
+    "nodemon": "^1.19.0"
   }
 }
