--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@babel/preset-env": "^7.4.4",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.4",
+    "core-util-is": "^1.0.2",
     "express": "^4.17.0",
     "helmet": "^3.18.0",
     "morgan": "^1.9.1"
