--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "core-util-is": "^1.0.2",
     "express": "^4.17.0",
     "helmet": "^3.18.0",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "pug": "^2.0.3"
   },
   "scripts": {
     "start": "nodemon --exec babel-node init.js --delay 2"
