--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "start": "nodemon --exec babel-node init.js --delay 2"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.8.2",
     "nodemon": "^1.19.0"
   }
 }
