--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.4",
     "core-util-is": "^1.0.2",
+    "dotenv": "^8.0.0",
     "express": "^4.17.0",
     "helmet": "^3.18.0",
+    "mongoose": "^5.6.0",
     "morgan": "^1.9.1",
     "pug": "^2.0.3"
   },
