--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "cookie-parser": "^1.4.4",
     "core-util-is": "^1.0.2",
     "dotenv": "^8.0.0",
+    "eslint-config-prettier": "^5.1.0",
+    "eslint-plugin-prettier": "^3.1.0",
     "express": "^4.17.0",
     "helmet": "^3.18.0",
     "mongoose": "^5.6.0",
@@ -24,6 +26,9 @@
   },
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^5.8.2",
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.18.0",
     "nodemon": "^1.19.0"
   }
 }
