--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cookie-parser": "^1.4.4",
     "core-util-is": "^1.0.2",
     "dotenv": "^8.0.0",
+    "eslint": "^6.0.1",
     "eslint-config-prettier": "^5.1.0",
     "eslint-plugin-prettier": "^3.1.0",
     "express": "^4.17.0",
@@ -19,16 +20,15 @@
     "mongoose": "^5.6.0",
     "morgan": "^1.9.1",
     "multer": "^1.4.1",
-    "pug": "^2.0.3"
+    "prettier": "^1.18.2",
+    "pug": "^2.0.3",
+    "yarn": "^1.16.0"
   },
   "scripts": {
     "start": "nodemon --exec babel-node init.js --delay 2"
   },
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^5.8.2",
-    "eslint": "^5.16.0",
-    "eslint-config-prettier": "^5.1.0",
-    "eslint-plugin-prettier": "^3.1.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.18.0",
     "nodemon": "^1.19.0"
