--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     "morgan": "^1.9.1",
     "multer": "^1.4.1",
     "pug": "^2.0.3",
+    "webpack": "^4.35.0",
+    "webpack-cli": "^3.3.5",
     "yarn": "^1.16.0"
   },
   "scripts": {
-    "start": "nodemon --exec babel-node init.js --delay 2"
+    "dev:server": "nodemon --exec babel-node init.js --delay 2",
+    "dev:assets": "webpack"
   },
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^5.8.2",
