--- a/package.json
+++ b/package.json
@@ -8,29 +8,36 @@
     "@babel/core": "^7.4.4",
     "@babel/node": "^7.2.2",
     "@babel/preset-env": "^7.4.4",
+    "autoprefixer": "^9.6.0",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.4",
     "core-util-is": "^1.0.2",
+    "css-loader": "^3.0.0",
     "dotenv": "^8.0.0",
     "express": "^4.17.0",
+    "extract-text-webpack-plugin": "^3.0.2",
     "helmet": "^3.18.0",
     "mongoose": "^5.6.0",
     "morgan": "^1.9.1",
     "multer": "^1.4.1",
+    "node-sass": "^4.12.0",
+    "postcss-loader": "^3.0.0",
     "pug": "^2.0.3",
-    "webpack": "^4.35.0",
+    "sass-loader": "^7.1.0",
     "webpack-cli": "^3.3.5",
     "yarn": "^1.16.0"
   },
   "scripts": {
     "dev:server": "nodemon --exec babel-node init.js --delay 2",
-    "dev:assets": "webpack"
+    "dev:assets": "WEBPACK_ENV=development webpack",
+    "build:assets": "WEBPACK_ENV=production webpack"
   },
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^5.8.2",
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.18.0",
-    "nodemon": "^1.19.0"
+    "nodemon": "^1.19.0",
+    "webpack": "^5.0.0-alpha.16"
   }
 }
