--- a/package.json
+++ b/package.json
@@ -7,29 +7,31 @@
   "dependencies": {
     "@babel/core": "^7.4.4",
     "@babel/node": "^7.2.2",
+    "@babel/polyfill": "^7.0.0",
     "@babel/preset-env": "^7.4.4",
-    "autoprefixer": "^9.6.0",
+    "autoprefixer": "^9.3.1",
+    "babel-loader": "^8.0.4",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.4",
     "core-util-is": "^1.0.2",
-    "css-loader": "^3.0.0",
+    "css-loader": "^1.0.1",
     "dotenv": "^8.0.0",
     "express": "^4.17.0",
-    "extract-text-webpack-plugin": "^3.0.2",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "helmet": "^3.18.0",
     "mongoose": "^5.6.0",
     "morgan": "^1.9.1",
     "multer": "^1.4.1",
-    "node-sass": "^4.12.0",
+    "node-sass": "^4.10.0",
     "postcss-loader": "^3.0.0",
     "pug": "^2.0.3",
     "sass-loader": "^7.1.0",
-    "webpack-cli": "^3.3.5",
-    "yarn": "^1.16.0"
+    "webpack": "^4.25.1",
+    "webpack-cli": "^3.1.2"
   },
   "scripts": {
     "dev:server": "nodemon --exec babel-node init.js --delay 2",
-    "dev:assets": "WEBPACK_ENV=development webpack",
+    "dev:assets": "WEBPACK_ENV=development webpack -w",
     "build:assets": "WEBPACK_ENV=production webpack"
   },
   "devDependencies": {
@@ -37,7 +39,6 @@
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.18.0",
-    "nodemon": "^1.19.0",
-    "webpack": "^5.0.0-alpha.16"
+    "nodemon": "^1.19.0"
   }
 }
