--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "autoprefixer": "^9.3.1",
     "babel-loader": "^8.0.4",
     "body-parser": "^1.19.0",
+    "connect-mongo": "^3.0.0",
     "cookie-parser": "^1.4.4",
     "core-util-is": "^1.0.2",
     "css-loader": "^1.0.1",
@@ -25,6 +26,7 @@
     "multer": "^1.4.1",
     "node-sass": "^4.10.0",
     "passport": "^0.4.0",
+    "passport-github": "^1.1.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^5.0.1",
     "postcss-loader": "^3.0.0",
