--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "express-session": "^1.16.2",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "helmet": "^3.18.0",
+    "localtunnel": "^1.9.2",
     "mongoose": "^5.6.0",
     "morgan": "^1.9.1",
     "multer": "^1.4.1",
     "node-sass": "^4.10.0",
     "passport": "^0.4.0",
+    "passport-facebook": "^3.0.0",
     "passport-github": "^1.1.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^5.0.1",
@@ -38,7 +40,8 @@
   "scripts": {
     "dev:server": "nodemon --exec babel-node init.js --delay 2 --ignore 'scss' ",
     "dev:assets": "WEBPACK_ENV=development webpack -w",
-    "build:assets": "WEBPACK_ENV=production webpack"
+    "build:assets": "WEBPACK_ENV=production webpack",
+    "tunnel": "lt --port 4000"
   },
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^5.8.2",
