--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@babel/polyfill": "^7.0.0",
     "@babel/preset-env": "^7.4.4",
     "autoprefixer": "^9.3.1",
+    "aws-sdk": "^2.496.0",
     "axios": "^0.19.0",
     "babel-loader": "^8.0.4",
     "body-parser": "^1.19.0",
@@ -21,11 +22,13 @@
     "express": "^4.17.0",
     "express-session": "^1.16.2",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "get-blob-duration": "^1.0.1",
     "helmet": "^3.18.0",
     "localtunnel": "^1.9.2",
     "mongoose": "^5.6.0",
     "morgan": "^1.9.1",
     "multer": "^1.4.1",
+    "multer-s3": "^2.9.0",
     "node-sass": "^4.10.0",
     "passport": "^0.4.0",
     "passport-facebook": "^3.0.0",
