--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "autoprefixer": "^9.3.1",
     "aws-sdk": "^2.496.0",
     "axios": "^0.19.0",
+    "babel-cli": "^6.26.0",
     "babel-loader": "^8.0.4",
     "body-parser": "^1.19.0",
     "connect-mongo": "^3.0.0",
