--- a/package.json
+++ b/package.json
@@ -1,9 +1,6 @@
 {
   "name": "wetube",
   "version": "1.0.0",
-  "engines": {
-    "node": "10.15.3"
-  },
   "description": "Cloning Youtube with Vanilla and NodeJS",
   "main": "index.js",
   "author": "lgit",
@@ -15,7 +12,6 @@
     "autoprefixer": "^9.3.1",
     "aws-sdk": "^2.496.0",
     "axios": "^0.19.0",
-    "babel-cli": "^6.26.0",
     "babel-loader": "^8.0.4",
     "body-parser": "^1.19.0",
     "connect-mongo": "^3.0.0",
@@ -54,7 +50,7 @@
     "build": "npm run build:server && npm run build:assets && npm run copyAll",
     "prebuild": "rm -rf build",
     "tunnel": "lt --port 4000",
-    "start": "PRODUCTION=true node build/init.js",
+    "start": "node build/init.js",
     "prestart": "npm run build"
   },
   "devDependencies": {
