--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "prestart": "npm run build"
   },
   "devDependencies": {
+    "@babel/cli": "^7.5.5",
     "@fortawesome/fontawesome-free": "^5.8.2",
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.1.0",
