--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "css-loader": "^1.0.1",
     "dotenv": "^8.0.0",
     "express": "^4.17.0",
+    "express-flash": "0.0.2",
     "express-session": "^1.16.2",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "get-blob-duration": "^1.0.1",
